adjusting structure and refactory code
