# app/Http/Resources/SalesResource.php
@@ -1,0 +1,24 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class SalesResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'client_id' => $this->client_id,
+            'product_id' => $this->product_id,
+            'price' => $this->price,
+            'quantity' => $this->quantity,
+        ];
+    }
+}
