# app/Models/Client.php
@@ -1,0 +1,16 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Client extends Model
+{
+    use HasFactory;
+
+    public function sales()
+    {
+        return $this->hasOne(Sales::class, 'client_id');
+    }
+}
